--- a/diapos/RadiacionSolar.tex
+++ b/diapos/RadiacionSolar.tex
@@ -1,4 +1,4 @@
-% Created 2020-02-05 mié 08:40
+% Created 2020-09-01 mar 18:27
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -56,16 +56,16 @@
  pdftitle={Radiación Solar},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 26.1 (Org mode 9.2)}, 
+ pdfcreator={Emacs 26.3 (Org mode 9.3.6)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Introducción}
-\label{sec:org5b9a6fd}
+\label{sec:org1902809}
 
-\begin{frame}[label={sec:orge41fe27}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:org51dd27d}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -77,7 +77,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgfd868db}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:orga95a80d}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se requiere medidas terrestres o imágenes de satélite.
@@ -87,7 +87,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4153327}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org0bafcde}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -98,7 +98,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org65cb9db}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:org05b4bd3}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
@@ -107,18 +107,18 @@
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd359e8d}]{Del plano horizontal al plano inclinado}
+\begin{frame}[label={sec:orgc606b79}]{Del plano horizontal al plano inclinado}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada.pdf}
 \end{center}
 \end{frame}
 
 \section{Geometría Sol y Tierra}
-\label{sec:orgbe13a5a}
+\label{sec:org9dba50c}
 \subsection{Movimiento Sol-Tierra}
-\label{sec:org4ce69c8}
+\label{sec:org1477715}
 
-\begin{frame}[label={sec:org3d1acd4}]{Movimiento terrestre}
+\begin{frame}[label={sec:org570dbf4}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -140,7 +140,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf39cf2b}]{Movimiento terrestre}
+\begin{frame}[label={sec:orge4c68f0}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -155,9 +155,9 @@ eclíptica}
 
 
 \subsection{Ángulos Solares}
-\label{sec:orgf6c6ade}
+\label{sec:org266990f}
 
-\begin{frame}[label={sec:org5a40464},plain]{Ejes terrestres}
+\begin{frame}[label={sec:org190f7c3},plain]{Ejes terrestres}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -178,7 +178,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd9516b5}]{Declinación}
+\begin{frame}[label={sec:org30fd895}]{Declinación}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/Declinacion.pdf}
 \end{center}
@@ -189,7 +189,7 @@ eclíptica}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbb1702f}]{Estaciones}
+\begin{frame}[label={sec:orgc3168b6}]{Estaciones}
 \begin{itemize}[<+->]
 \item \alert{Solsticio de junio} 
 \begin{itemize}[<.->]
@@ -230,7 +230,7 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7be5d69}]{Hora Solar}
+\begin{frame}[label={sec:orgefb355e}]{Hora Solar}
 \begin{itemize}
 \item \(w\), diferencia entre instante en curso y el mediodía solar (\(w = 0\), \(\psi_s = 0\)).
 \item Criterio de signos: \(w < 0\) antes del mediodía.
@@ -247,13 +247,13 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org74565d6}]{Duración del día}
+\begin{frame}[label={sec:org398758e}]{Duración del día}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgef41338},plain]{Ejes locales}
+\begin{frame}[label={sec:org87ede8d},plain]{Ejes locales}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -276,7 +276,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 
-\begin{frame}[label={sec:orge84ecea}]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:org2ca71f9}]{Relación entre sistemas de coordenadas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
 \end{center}
@@ -286,7 +286,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org84a9351},plain]{Cenit Solar}
+\begin{frame}[label={sec:orgfedbcb3},plain]{Cenit Solar}
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
@@ -307,7 +307,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org407cbfb},plain]{Azimut solar}
+\begin{frame}[label={sec:org04d1102},plain]{Azimut solar}
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
@@ -328,14 +328,14 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org7263993}]{Trayectoria Solar (\(60\degree N\))}
+\begin{frame}[label={sec:org7a178a2}]{Trayectoria Solar (\(60\degree N\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org07755b8}]{Trayectoria Solar (\(40\degree S\))}
+\begin{frame}[label={sec:org9b57a1d}]{Trayectoria Solar (\(40\degree S\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
 \end{center}
@@ -343,8 +343,8 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 
 
 \subsection{Hora solar y oficial}
-\label{sec:org20315df}
-\begin{frame}[label={sec:org79aef1a}]{Hora solar}
+\label{sec:orgea9ad38}
+\begin{frame}[label={sec:org5cec4e9}]{Hora solar}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}
@@ -356,7 +356,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6c45813}]{Hora oficial}
+\begin{frame}[label={sec:org65e6e1f}]{Hora oficial}
 \begin{itemize}
 \item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
 que sirve de referencia para una zona determinada.
@@ -373,7 +373,7 @@ horario. \emph{\(\Delta\lambda\) es positiva cuando la localidad está situada a
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb5a174b}]{Tiempo solar medio}
+\begin{frame}[label={sec:orge632140}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -385,7 +385,7 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd9107e4}]{Ecuación del Tiempo}
+\begin{frame}[label={sec:org456f7e4}]{Ecuación del Tiempo}
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
       M+3.5884\right)\right)
@@ -399,7 +399,7 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc5ec6e5}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgc510987}]{Ejemplo de cálculo}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{block}{}
@@ -411,7 +411,7 @@ Calcule la hora solar real correspondiente al día 23 de Abril de 2010
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org7c1a587}]{Solución}
+\begin{frame}[label={sec:org7ea2dc7}]{Solución}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}[<+->]
@@ -430,7 +430,7 @@ oficial.
 \end{frame}
 
 
-\begin{frame}[label={sec:org32a2513}]{}
+\begin{frame}[label={sec:org4945d28}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -439,12 +439,12 @@ oficial.
 \end{frame}
 
 \section{Radiación Solar en la Superficie Terrestre}
-\label{sec:orgf08f682}
+\label{sec:org94e6d1c}
 
 \subsection{Radiación Extra-atmosférica}
-\label{sec:org3fbd0d8}
+\label{sec:orga88e621}
 
-\begin{frame}[label={sec:orgd54c79f}]{Irradiancia e Irradiación}
+\begin{frame}[label={sec:orgf9978c8}]{Irradiancia e Irradiación}
 \begin{description}
 \item[{Irradiancia}] es la densidad de \emph{potencia} de radiacion solar incidente en una superficie.
 \begin{itemize}
@@ -457,14 +457,14 @@ oficial.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orgda6d345}]{Definición}
+\begin{frame}[label={sec:orgbf5425f}]{Definición}
 \begin{itemize}
 \item \alert{Radiación extra-atmosférica}: radiación directa del Sol que alcanza la superficie de la atmósfera.
 
 \item \alert{Constante solar} \(B_{0}=\SI{1367}{\watt\per\meter\squared}\) (irradiancia solar sobre la superficie normal al vector solar en el límite superior de la atmósfera terrestre)
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgee0b85f}]{Ecuaciones}
+\begin{frame}[label={sec:org6d86c59}]{Ecuaciones}
 \begin{itemize}
 \item \alert{Irradiancia extra-atmosférica} (\(\si{\watt\per\meter\squared}\))
 
@@ -482,7 +482,7 @@ oficial.
 \end{frame}
 
 
-\begin{frame}[label={sec:org1d4d555}]{Días promedio}
+\begin{frame}[label={sec:orgaf9f659}]{Días promedio}
 \begin{itemize}
 \item Es posible demostrar que el \alert{promedio mensual} de esta irradiación
 diaria \alert{coincide numericamente} con el valor de irradiación diaria
@@ -512,14 +512,14 @@ Mes & Jul & Ago & Sep & Oct & Nov & Dic\\
 \end{frame}
 
 \subsection{Radiación solar en la superficie terrestre}
-\label{sec:org39b71c4}
-\begin{frame}[label={sec:orge685ff5}]{}
+\label{sec:orgb038a4b}
+\begin{frame}[label={sec:orgafadc81}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_G0.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4d3d2ba}]{Interacción de la radiación con la atmósfera}
+\begin{frame}[label={sec:orgca23648}]{Interacción de la radiación con la atmósfera}
 \begin{itemize}
 \item \alert{Disminución} de la radiación incidente en la superficie terrestre
 (reflexión en nubes)
@@ -536,7 +536,7 @@ partículas)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8f101f9}]{Componentes de la radiación solar}
+\begin{frame}[label={sec:org3f47e9f}]{Componentes de la radiación solar}
 \begin{itemize}
 \item \alert{Radiación Directa}. (B)
 
@@ -564,7 +564,7 @@ partículas)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge65f294}]{Cómo se escribe}
+\begin{frame}[label={sec:org56da441}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \begin{description}
 \item[{Forma+Tiempo+Lugar:}] Irradiancia directa (forma) horaria (tiempo)
@@ -584,7 +584,7 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org41a7a38}]{Cómo se escribe}
+\begin{frame}[label={sec:org1592376}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \[Forma_{tiempo,promedio}(lugar)\]
 
@@ -598,15 +598,15 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 \section{Cálculo de componentes de radiación solar}
-\label{sec:org60afc61}
+\label{sec:orgb9b18cd}
 
-\begin{frame}[label={sec:orgf4a8644}]{}
+\begin{frame}[label={sec:orgdc65479}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org399b7bd}]{Caracterización de la atmósfera}
+\begin{frame}[label={sec:org12ab198}]{Caracterización de la atmósfera}
 \begin{itemize}
 \item \alert{Masa de aire}:
 
@@ -635,7 +635,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge318971}]{Índice de claridad}
+\begin{frame}[label={sec:org0f62e5e}]{Índice de claridad}
 \begin{description}
 \item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
 
@@ -647,7 +647,7 @@ movimiento aparente del sol}.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orgb088831}]{Estimación de Directa y Difusa}
+\begin{frame}[label={sec:org10bc56e}]{Estimación de Directa y Difusa}
 \begin{itemize}
 \item Objetivo: Establecer una \alert{relación entre la fracción difusa} de la radiación horizontal (\(F_{D}=\frac{D(0)}{G(0)}\)) y \alert{el índice de claridad}.
 
@@ -657,7 +657,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org27a358b},plain]{Medias mensuales: Ecuación de Page}
+\begin{frame}[label={sec:orgd173f39},plain]{Medias mensuales: Ecuación de Page}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtMensual.pdf}
 \end{center}
@@ -665,7 +665,7 @@ movimiento aparente del sol}.
 \[F_{Dm}=1-1.13\cdot K_{Tm}\]
 \end{frame}
 
-\begin{frame}[label={sec:org840a972}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
+\begin{frame}[label={sec:orgfaaf368}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
 Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\) en un mes con \(B_{o,dm}(0) = \SI{4320}{\watthour\per\meter\squared}\)  será:
 
 \begin{itemize}
@@ -679,7 +679,7 @@ Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2fefcd4},plain]{Valores Diarios: Collares-Pereira y Rabl}
+\begin{frame}[label={sec:org1137048},plain]{Valores Diarios: Collares-Pereira y Rabl}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtDiario.pdf}
 \end{center}
@@ -693,7 +693,7 @@ F_{Dd} = \begin{cases}
 {\scriptsize \par}
 \end{frame}
 
-\begin{frame}[label={sec:org27176b1}]{Ejemplo}
+\begin{frame}[label={sec:orgb225f18}]{Ejemplo}
 \begin{description}
 \item[{Calcular}] las componentes directa y difusa de la radiación solar del:
 
@@ -704,10 +704,10 @@ F_{Dd} = \begin{cases}
 \end{description}
 \end{frame}
 \section{Bases de Datos}
-\label{sec:org7b16fec}
+\label{sec:org48033dd}
 \subsection{Introducción}
-\label{sec:org1766fdc}
-\begin{frame}[label={sec:orga60efd9}]{Variabilidad Solar}
+\label{sec:orgd9c3892}
+\begin{frame}[label={sec:orga200d0a}]{Variabilidad Solar}
 \begin{itemize}
 \item La \alert{radiación extra-atmosférica} se puede expresar de forma \alert{analítica} en función del día, hora y latitud.
 \item La \alert{radiación en la superficie terrestre} es un \alert{proceso estocástico} (aleatorio) debido a la interacción con la atmósfera.
@@ -717,7 +717,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org9572701}]{Estimaciones a Largo Plazo}
+\begin{frame}[label={sec:org0b95ace}]{Estimaciones a Largo Plazo}
 \begin{itemize}
 \item Nos interesan \alert{estimaciones a largo plazo} del funcionamiento de los sistemas FV en una localización concreta.
 \item Las fuentes de datos de radiación solar deben:
@@ -728,7 +728,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org31c4b78}]{Variabilidad Temporal}
+\begin{frame}[label={sec:orgf011a78}]{Variabilidad Temporal}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
 \end{center}
@@ -740,7 +740,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgdf45462}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org2bf816c}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[height=0.4\textheight]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -752,7 +752,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf854b45}]{Resumen}
+\begin{frame}[label={sec:orgea90a20}]{Resumen}
 \begin{block}{Requerimientos}
 Una estimación de la productividad de un SFV confiable y representativa en el largo plazo requiere:
 \begin{itemize}
@@ -763,28 +763,26 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Fuentes de Datos}
-\label{sec:org34b3869}
-\begin{frame}[label={sec:org1cf08d2}]{Estaciones Meteorológicas}
+\label{sec:org35e0365}
+\begin{frame}[label={sec:orgf32bfa2}]{Estaciones Meteorológicas}
 \begin{itemize}
 \item Series temporales largas
-\item Alta resolución temporal (\(\SI{1}{\min}\))
+\item Alta resolución temporal (\(\SI{1}{\sec}\) - \(\SI{1}{\min}\))
 \item Baja resolución espacial.
 \item Los errores se deben al medidor (no se emplean modelos).
 \end{itemize}
 
 \begin{block}{Piranómetro}
 \begin{center}
-\begin{center}
 \includegraphics[height=0.5\textheight]{../figs/piranometro.jpg}
-\end{center}
 \end{center}
 \end{block}
 \end{frame}
 
 
-\begin{frame}[label={sec:org397cbb1}]{Imágenes de Satelite}
+\begin{frame}[label={sec:org1b96d23}]{Imágenes de Satelite}
 \begin{itemize}
-\item Baja resolución temporal (\(\SI{1}{hora}\)).
+\item Baja resolución temporal (\(\SI{15}{\min}\) - \(\SI{1}{hora}\)).
 
 \item Alta resolución espacial (\(\SI{15}{km}\)).
 
@@ -792,10 +790,13 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 
 \item Los errores se deben a los modelos.
 \end{itemize}
+
+\begin{center}
+\includegraphics[height=0.5\textheight]{../figs/CMSAF.png}
+\end{center}
 \end{frame}
 
-
-\begin{frame}[label={sec:org4c22a86}]{Métodos Híbridos}
+\begin{frame}[label={sec:org8f23b1b}]{Métodos Híbridos}
 \begin{itemize}
 \item Las medidas terrestres se mezclan con las estimaciones de satélite para mejorar la resolución espacial.
 \item Interpolación Espacial.
@@ -814,7 +815,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1b312f2}]{Fuentes de Datos}
+\begin{frame}[label={sec:orge7ef697}]{Fuentes de Datos}
 \url{https://github.com/oscarperpinan/mds/wiki}
 
 \begin{itemize}
@@ -835,8 +836,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Control de Calidad}
-\label{sec:org8a148d9}
-\begin{frame}[label={sec:orgdfad96a}]{Introducción}
+\label{sec:org7cef574}
+\begin{frame}[label={sec:org095cb52}]{Introducción}
 \begin{itemize}
 \item Es necesario filtrar y corregir las medidas para eliminar datos erróneos y valores extremos.
 \begin{itemize}
@@ -847,7 +848,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfa7933b}]{Límites Físicos}
+\begin{frame}[label={sec:org289f42c}]{Límites Físicos}
 \begin{itemize}
 \item El índice de claridad no puede ser mayor que 1 (la irradiación global diaria no puede superar la extra-atmosférica).
 \end{itemize}
@@ -867,14 +868,14 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org21d8440}]{Coherencia Espacial}
+\begin{frame}[label={sec:org706ca0a}]{Coherencia Espacial}
 \begin{itemize}
 \item Las medidas de una estación se deben comparar con \alert{estaciones cercanas} (por ejemplo, mediante interpolación espacial).
 \item La comparación se debe realizar con \alert{valores agregados} (medias diarias o mensuales).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgff8a02b}]{Análisis Estadístico de las Desviaciones}
+\begin{frame}[label={sec:orgb233f63}]{Análisis Estadístico de las Desviaciones}
 \begin{itemize}
 \item Desviaciones, \(\mathbf{D}\), entre observaciones, \(\mathbf{O}\), y un modelo, \(\mathbf{M}\) (u otro conjunto de observaciones):
 \end{itemize}
@@ -892,7 +893,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org8a690c4}]{Exactitud y Precisión}
+\begin{frame}[label={sec:org3ed96ff}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/bias-variance.png}
 \end{center}
@@ -900,7 +901,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:org9afab34}]{Métricas}
+\begin{frame}[label={sec:orgbdb245b}]{Métricas}
 \begin{itemize}
 \item \alert{Mean Bias Difference (MBD)}, diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -923,7 +924,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
 \]
 \end{frame}
-\begin{frame}[label={sec:orgfcad505}]{}
+\begin{frame}[label={sec:org83da794}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -932,12 +933,12 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{frame}
 
 \section{Radiación Solar en Generadores FV}
-\label{sec:org7e129f1}
+\label{sec:orge90b716}
 
 \subsection{Introducción}
-\label{sec:orgbf67788}
+\label{sec:org24ed690}
 
-\begin{frame}[label={sec:orgffd5d97}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org1c4202c}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un ángulo de inclinación positivo para maximizar el rendimiento.
 \item Este ángulo depende de la latitud del lugar y de la aplicación del sistema.
@@ -948,7 +949,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8a2c1c5}]{Definiciones}
+\begin{frame}[label={sec:orge62ae3f}]{Definiciones}
 \begin{itemize}
 \item \(\theta_s\), \alert{ángulo de incidencia (AOI)}, ángulo entre los rayos solares y la perpendicular al plano del generador.
 \item \(\alpha\): \alert{orientación del generador} (0º cuando está orientado al mediodía solar)
@@ -956,14 +957,14 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{frame}
 \subsection{Tipos de Sistemas}
-\label{sec:org615657a}
-\begin{frame}[label={sec:org7be77ee}]{Sistema Estático}
+\label{sec:org2d8022c}
+\begin{frame}[label={sec:org10106a9}]{Sistema Estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1b64837}]{Sistemas con seguimiento}
+\begin{frame}[label={sec:org5e65a3a}]{Sistemas con seguimiento}
 \begin{itemize}[<+->]
 \item \alert{Fundamento:}
 \begin{itemize}[<.->]
@@ -982,7 +983,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org64999d2}]{Algunos tipos de seguimiento solar}
+\begin{frame}[label={sec:org29e21c2}]{Algunos tipos de seguimiento solar}
 \begin{itemize}[<+->]
 \item \alert{Doble eje}
 \begin{itemize}[<.->]
@@ -1010,27 +1011,27 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1a26782}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
+\begin{frame}[label={sec:org8950ab9}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org96fa0eb}]{Sistema de Seguimiento (2x ejes)}
+\begin{frame}[label={sec:org2ffc999}]{Sistema de Seguimiento (2x ejes)}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
 \subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:orgfa15dc9}
-\begin{frame}[label={sec:org16fb50a}]{}
+\label{sec:org9e00d1b}
+\begin{frame}[label={sec:org0627bab}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org936540b}]{Planteamiento}
+\begin{frame}[label={sec:org6ccc35c}]{Planteamiento}
 \begin{itemize}
 \item \alert{Objetivo}: construir un perfil diario promedio de valores de \emph{irradiancia} global y difusa, \(G(0), D(0)\), a partir de valores de \emph{irradiación} global y difusa diaria, \(G_d(0), D_d(0)\).
 
@@ -1049,7 +1050,7 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb24dfb1}]{Perfil}
+\begin{frame}[label={sec:orgeee65ba}]{Perfil}
 \[D(0) = r_D \cdot D_{d}(0)\]
 
 \[G(0) = r_G \cdot G_{d}(0)\]
@@ -1058,7 +1059,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org641af82}]{Ecuaciones}
+\begin{frame}[label={sec:org4660f5b}]{Ecuaciones}
 \[
 r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\cos(\omega_{s})-\sin(\omega_{s})}
 \]
@@ -1072,15 +1073,15 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 \subsection{Transformación al plano del generador}
-\label{sec:org76ae68f}
+\label{sec:orgeb05e03}
 
-\begin{frame}[label={sec:org4446046}]{}
+\begin{frame}[label={sec:orgdcaab26}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org50134cd}]{Planteamiento}
+\begin{frame}[label={sec:org0f06fbc}]{Planteamiento}
 \begin{itemize}
 \item \alert{Irradiancia Directa} \(B(\beta, \alpha)\): ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 \item \alert{Irradiancia Difusa}  \(D(\beta, \alpha)\): modelos del estado de cielo, modelo isotrópico o anisotrópico.
@@ -1092,13 +1093,13 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org59dede6}]{Irradiancia Directa}
+\begin{frame}[label={sec:orgb2d873c}]{Irradiancia Directa}
 \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 \end{frame}
 
-\begin{frame}[label={sec:org85bf000}]{Irradiancia Difusa}
+\begin{frame}[label={sec:org57583d5}]{Irradiancia Difusa}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1106,7 +1107,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[D(\beta,\alpha)=\intop_{\Omega}L(\theta_{z},\psi)\cdot\cos(\theta_{z}^{'})d\Omega\]
 \end{frame}
 
-\begin{frame}[label={sec:orgf4c3d6f}]{Irradiancia Difusa Isotrópica}
+\begin{frame}[label={sec:org77645c9}]{Irradiancia Difusa Isotrópica}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1116,7 +1117,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 \end{frame}
-\begin{frame}[label={sec:org57ead58}]{Irradiancia Difusa Anisotrópica}
+\begin{frame}[label={sec:org01c3932}]{Irradiancia Difusa Anisotrópica}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -1126,7 +1127,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[k_{1} = \frac{B(0)}{B_{0}(0)}\]
 \end{frame}
 
-\begin{frame}[label={sec:orge21818f}]{Irradiancia de Albedo}
+\begin{frame}[label={sec:org4e52717}]{Irradiancia de Albedo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1138,8 +1139,8 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \end{frame}
 
 \subsection{Geometría de los sistemas fotovoltaicos}
-\label{sec:orgd2fbfbe}
-\begin{frame}[label={sec:org3648761},plain]{Ángulo de Incidencia Sistema Estático}
+\label{sec:orgd522a30}
+\begin{frame}[label={sec:org47d778e},plain]{Ángulo de Incidencia Sistema Estático}
 \begin{itemize}
 \item Si \(\alpha=0\)
 \end{itemize}
@@ -1156,7 +1157,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3c04fa8}]{Sistema Estático: Ángulo de Incidencia}
+\begin{frame}[label={sec:org53df455}]{Sistema Estático: Ángulo de Incidencia}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1167,7 +1168,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 
-\begin{frame}[label={sec:orgd2822a8},plain]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org03cbb3c},plain]{Ángulo de Incidencia Seguidor 1x NS}
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
 \begin{center}
@@ -1175,7 +1176,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8b6e767}]{Ángulo de Inclinación Seguidor 1x NS}
+\begin{frame}[label={sec:org44cd8e7}]{Ángulo de Inclinación Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1186,7 +1187,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 
-\begin{frame}[label={sec:org91982e7}]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org76cd5f2}]{Ángulo de Incidencia Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1198,7 +1199,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 
-\begin{frame}[label={sec:org468748a},plain]{Ángulo de Incidencia Seguidor 2x}
+\begin{frame}[label={sec:org1feef2c},plain]{Ángulo de Incidencia Seguidor 2x}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
 \end{center}
@@ -1210,7 +1211,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
   \cos(\theta_{s}) &= 1
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org4dfe1fb}]{Inclinación Seguidor 2x}
+\begin{frame}[label={sec:org00d691c}]{Inclinación Seguidor 2x}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1221,38 +1222,38 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 \subsection{Pérdidas angulares y por suciedad}
-\label{sec:org554eb58}
+\label{sec:org52c39f0}
 
-\begin{frame}[label={sec:org32eb355}]{}
+\begin{frame}[label={sec:orgc6bd515}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_efectiva.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge50574d}]{Radiación directa}
+\begin{frame}[label={sec:org8dc06e4}]{Radiación directa}
 \[B_{ef}(\beta,\alpha)=B(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot (1-FT_{B}(\theta_{s}))\]
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/Suciedad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgecf1487}]{Difusa y Albedo}
+\begin{frame}[label={sec:org5f39115}]{Difusa y Albedo}
 \begin{align*}
 D_{ef}^{iso}(\beta,\alpha) &= D^{iso}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{D}(\beta))\\
 D_{ef}^{cir}(\beta,\alpha) &= D^{cir}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{B}(\theta_{s}))\\
 R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{R}(\beta))
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org34367b1}]{Pérdidas anuales}
+\begin{frame}[label={sec:org07e0f7d}]{Pérdidas anuales}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GefVSG.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Radiación Efectiva según tipologías}
-\label{sec:org909a5b1}
+\label{sec:orgde57f75}
 
-\begin{frame}[label={sec:orgb1917fe}]{Radiación en Sistema estático}
+\begin{frame}[label={sec:orgefad744}]{Radiación en Sistema estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FixedKrig.pdf}
 \end{center}
@@ -1260,7 +1261,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org5e3a651}]{Radiación en Seguimiento Eje Horizontal}
+\begin{frame}[label={sec:org2d49785}]{Radiación en Seguimiento Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizKrig.pdf}
 \end{center}
@@ -1268,14 +1269,14 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orga3086c2}]{Radiación en Seguimiento Doble Eje}
+\begin{frame}[label={sec:org44f4b90}]{Radiación en Seguimiento Doble Eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoKrig.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org3b86fe1}]{Comparación Doble Eje-Estática}
+\begin{frame}[label={sec:org96f9edb}]{Comparación Doble Eje-Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoFixed.pdf}
 \end{center}
@@ -1283,7 +1284,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org93acb3f}]{Comparación Doble Eje - Horizontal}
+\begin{frame}[label={sec:orgb365564}]{Comparación Doble Eje - Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoHoriz.pdf}
 \end{center}
@@ -1291,7 +1292,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org9266d17}]{Comparación Eje Horizontal - Estática}
+\begin{frame}[label={sec:orge8e9c90}]{Comparación Eje Horizontal - Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizFixed.pdf}
 \end{center}
@@ -1299,20 +1300,20 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org5e9c95a}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:orgfd8abe7}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystems.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org74fdb07}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:orgb54ead0}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystemsG0.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb7b4756}]{}
+\begin{frame}[label={sec:org74d264b}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
