--- a/diapos/RadiacionSolar.tex
+++ b/diapos/RadiacionSolar.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-01 mar 18:27
+% Created 2020-11-14 sáb 21:37
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -56,16 +56,16 @@
  pdftitle={Radiación Solar},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 26.3 (Org mode 9.3.6)}, 
+ pdfcreator={Emacs 26.3 (Org mode 9.4)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Introducción}
-\label{sec:org1902809}
+\label{sec:orgb848070}
 
-\begin{frame}[label={sec:org51dd27d}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:org67d2332}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -77,7 +77,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orga95a80d}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:org4b242e1}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se requiere medidas terrestres o imágenes de satélite.
@@ -87,7 +87,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0bafcde}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org6ab991a}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -98,7 +98,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org05b4bd3}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:orgc4b46fc}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
@@ -107,18 +107,18 @@
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc606b79}]{Del plano horizontal al plano inclinado}
+\begin{frame}[label={sec:orgd55c46e}]{Del plano horizontal al plano inclinado}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada.pdf}
 \end{center}
 \end{frame}
 
 \section{Geometría Sol y Tierra}
-\label{sec:org9dba50c}
+\label{sec:org6b561ef}
 \subsection{Movimiento Sol-Tierra}
-\label{sec:org1477715}
+\label{sec:org61351f4}
 
-\begin{frame}[label={sec:org570dbf4}]{Movimiento terrestre}
+\begin{frame}[label={sec:orgd5dd4c1}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -140,24 +140,35 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge4c68f0}]{Movimiento terrestre}
+\begin{frame}[label={sec:org8521792}]{Movimiento terrestre}
+\begin{columns}
+\begin{column}{0.6\columnwidth}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
-
-\begin{itemize}
-\item Entre el eje polar y el plano de la eclíptica hay un ángulo constante de \(23,45\degree\).
-
-\item Entre el plano ecuatorial y la linea que une la Tierra y el Sol hay un ángulo variable: \emph{declinación.}
-\end{itemize}
+\end{column}
+\begin{column}{0.4\columnwidth}
+Entre eje polar y plano de la eclíptica: ángulo constante de \(23,45\degree\).
+\end{column}
+\end{columns}
+\begin{columns}
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/SoldesdeTierra.pdf}
+\end{center}
+\end{column}
+\begin{column}{0.4\columnwidth}
+Entre plano ecuatorial y línea que une Tierra y Sol: ángulo variable, \emph{declinación}.
+\end{column}
+\end{columns}
 \end{frame}
 
 
 
 \subsection{Ángulos Solares}
-\label{sec:org266990f}
+\label{sec:org4257860}
 
-\begin{frame}[label={sec:org190f7c3},plain]{Ejes terrestres}
+\begin{frame}[label={sec:org30539aa},plain]{Ejes terrestres}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -178,7 +189,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org30fd895}]{Declinación}
+\begin{frame}[label={sec:org8587b7b}]{Declinación}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/Declinacion.pdf}
 \end{center}
@@ -189,7 +200,7 @@ eclíptica}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc3168b6}]{Estaciones}
+\begin{frame}[label={sec:orgafe4fe0}]{Estaciones}
 \begin{itemize}[<+->]
 \item \alert{Solsticio de junio} 
 \begin{itemize}[<.->]
@@ -230,7 +241,7 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgefb355e}]{Hora Solar}
+\begin{frame}[label={sec:org61db825}]{Hora Solar}
 \begin{itemize}
 \item \(w\), diferencia entre instante en curso y el mediodía solar (\(w = 0\), \(\psi_s = 0\)).
 \item Criterio de signos: \(w < 0\) antes del mediodía.
@@ -247,13 +258,13 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org398758e}]{Duración del día}
+\begin{frame}[label={sec:org5d8a307}]{Duración del día}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org87ede8d},plain]{Ejes locales}
+\begin{frame}[label={sec:org2810d6b},plain]{Ejes locales}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -276,7 +287,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 
-\begin{frame}[label={sec:org2ca71f9}]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:org53d7de4}]{Relación entre sistemas de coordenadas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
 \end{center}
@@ -286,7 +297,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfedbcb3},plain]{Cenit Solar}
+\begin{frame}[label={sec:org19a8dc8},plain]{Cenit Solar}
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
@@ -307,7 +318,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org04d1102},plain]{Azimut solar}
+\begin{frame}[label={sec:org9c94d47},plain]{Azimut solar}
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
@@ -328,14 +339,14 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org7a178a2}]{Trayectoria Solar (\(60\degree N\))}
+\begin{frame}[label={sec:org8277730}]{Trayectoria Solar (\(60\degree N\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org9b57a1d}]{Trayectoria Solar (\(40\degree S\))}
+\begin{frame}[label={sec:orgd08c486}]{Trayectoria Solar (\(40\degree S\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
 \end{center}
@@ -343,8 +354,8 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 
 
 \subsection{Hora solar y oficial}
-\label{sec:orgea9ad38}
-\begin{frame}[label={sec:org5cec4e9}]{Hora solar}
+\label{sec:org77275b4}
+\begin{frame}[label={sec:org679e8ff}]{Hora solar}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}
@@ -356,7 +367,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org65e6e1f}]{Hora oficial}
+\begin{frame}[label={sec:org48fee9e}]{Hora oficial}
 \begin{itemize}
 \item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
 que sirve de referencia para una zona determinada.
@@ -373,7 +384,7 @@ horario. \emph{\(\Delta\lambda\) es positiva cuando la localidad está situada a
 \end{frame}
 
 
-\begin{frame}[label={sec:orge632140}]{Tiempo solar medio}
+\begin{frame}[label={sec:org930da0e}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -385,7 +396,7 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org456f7e4}]{Ecuación del Tiempo}
+\begin{frame}[label={sec:orgab023f9}]{Ecuación del Tiempo}
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
       M+3.5884\right)\right)
@@ -399,7 +410,7 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc510987}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orge42ca4d}]{Ejemplo de cálculo}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{block}{}
@@ -411,7 +422,7 @@ Calcule la hora solar real correspondiente al día 23 de Abril de 2010
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org7ea2dc7}]{Solución}
+\begin{frame}[label={sec:org73b429d}]{Solución}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}[<+->]
@@ -430,7 +441,7 @@ oficial.
 \end{frame}
 
 
-\begin{frame}[label={sec:org4945d28}]{}
+\begin{frame}[label={sec:org5d55f61}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -439,12 +450,12 @@ oficial.
 \end{frame}
 
 \section{Radiación Solar en la Superficie Terrestre}
-\label{sec:org94e6d1c}
+\label{sec:orga061878}
 
 \subsection{Radiación Extra-atmosférica}
-\label{sec:orga88e621}
+\label{sec:org347b098}
 
-\begin{frame}[label={sec:orgf9978c8}]{Irradiancia e Irradiación}
+\begin{frame}[label={sec:orga556f8d}]{Irradiancia e Irradiación}
 \begin{description}
 \item[{Irradiancia}] es la densidad de \emph{potencia} de radiacion solar incidente en una superficie.
 \begin{itemize}
@@ -457,14 +468,14 @@ oficial.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orgbf5425f}]{Definición}
+\begin{frame}[label={sec:org0f2ffbd}]{Definición}
 \begin{itemize}
 \item \alert{Radiación extra-atmosférica}: radiación directa del Sol que alcanza la superficie de la atmósfera.
 
 \item \alert{Constante solar} \(B_{0}=\SI{1367}{\watt\per\meter\squared}\) (irradiancia solar sobre la superficie normal al vector solar en el límite superior de la atmósfera terrestre)
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org6d86c59}]{Ecuaciones}
+\begin{frame}[label={sec:orgcecf683}]{Ecuaciones}
 \begin{itemize}
 \item \alert{Irradiancia extra-atmosférica} (\(\si{\watt\per\meter\squared}\))
 
@@ -474,15 +485,15 @@ oficial.
 \[\epsilon_0 = 1+0,033\cdot\cos(2\pi d_n/365)\]
 
 \item \alert{Irradiación extra-atmosférica diaria} (\(\si{\watthour\per\meter\squared}\)) 
-\[
-  B_{0d}(0)=-\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s}\right)
-\]
-($\omega_{s}$ en radianes)
+  \[
+B_{0d}(0)=-\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s}\right)
+  \]
+  ($\omega_{s}$ en radianes)
 \end{itemize}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgaf9f659}]{Días promedio}
+\begin{frame}[label={sec:org6e3d231}]{Días promedio}
 \begin{itemize}
 \item Es posible demostrar que el \alert{promedio mensual} de esta irradiación
 diaria \alert{coincide numericamente} con el valor de irradiación diaria
@@ -511,15 +522,31 @@ Mes & Jul & Ago & Sep & Oct & Nov & Dic\\
 \end{center}
 \end{frame}
 
+\begin{frame}[label={sec:org61f0dd0}]{Ejemplo}
+Calcula la irradiación diaria extra-atmosférica en el plano horizontal del día 18 de septiembre (\(d_n = 261\)) en un lugar de latitud 40\degree N.
+
+
+\begin{align*}
+  \delta &= 23,45\degree\cdot\sin\left(\frac{2\pi\cdot\left(261+284\right)}{365}\right) = 1.0089\degree\\
+  \\
+  \cos \omega_s &= -\tan(\delta) \tan(\phi) = -0.01478\\
+  \omega_s &= -90.85\degree = \SI{-1.586}{\radian}\\
+  \\
+  \epsilon_0 &= 1+0.033\cdot\cos(2\pi\cdot261/365) = 0.9928151\\
+  \\
+  B_{0d}(0) &= -\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s}\right) = \\
+         &= \SI{8126.37}{\kilo\watthour\per\meter\squared}
+\end{align*}
+\end{frame}
 \subsection{Radiación solar en la superficie terrestre}
-\label{sec:orgb038a4b}
-\begin{frame}[label={sec:orgafadc81}]{}
+\label{sec:orgff30538}
+\begin{frame}[label={sec:orgb4cdb64}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_G0.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgca23648}]{Interacción de la radiación con la atmósfera}
+\begin{frame}[label={sec:org18bebf7}]{Interacción de la radiación con la atmósfera}
 \begin{itemize}
 \item \alert{Disminución} de la radiación incidente en la superficie terrestre
 (reflexión en nubes)
@@ -536,7 +563,7 @@ partículas)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3f47e9f}]{Componentes de la radiación solar}
+\begin{frame}[label={sec:org7e73ca4}]{Componentes de la radiación solar}
 \begin{itemize}
 \item \alert{Radiación Directa}. (B)
 
@@ -564,7 +591,7 @@ partículas)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org56da441}]{Cómo se escribe}
+\begin{frame}[label={sec:org82f6b62}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \begin{description}
 \item[{Forma+Tiempo+Lugar:}] Irradiancia directa (forma) horaria (tiempo)
@@ -584,7 +611,7 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org1592376}]{Cómo se escribe}
+\begin{frame}[label={sec:orgc2f6fa9}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \[Forma_{tiempo,promedio}(lugar)\]
 
@@ -598,15 +625,15 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 \section{Cálculo de componentes de radiación solar}
-\label{sec:orgb9b18cd}
+\label{sec:orga11d883}
 
-\begin{frame}[label={sec:orgdc65479}]{}
+\begin{frame}[label={sec:org09c38a3}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org12ab198}]{Caracterización de la atmósfera}
+\begin{frame}[label={sec:org5c2f1af}]{Caracterización de la atmósfera}
 \begin{itemize}
 \item \alert{Masa de aire}:
 
@@ -635,7 +662,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0f62e5e}]{Índice de claridad}
+\begin{frame}[label={sec:orgd7648a8}]{Índice de claridad}
 \begin{description}
 \item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
 
@@ -647,7 +674,7 @@ movimiento aparente del sol}.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org10bc56e}]{Estimación de Directa y Difusa}
+\begin{frame}[label={sec:org8cb86b0}]{Estimación de Directa y Difusa}
 \begin{itemize}
 \item Objetivo: Establecer una \alert{relación entre la fracción difusa} de la radiación horizontal (\(F_{D}=\frac{D(0)}{G(0)}\)) y \alert{el índice de claridad}.
 
@@ -657,7 +684,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd173f39},plain]{Medias mensuales: Ecuación de Page}
+\begin{frame}[label={sec:orgf920364},plain]{Medias mensuales: Ecuación de Page}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtMensual.pdf}
 \end{center}
@@ -665,7 +692,7 @@ movimiento aparente del sol}.
 \[F_{Dm}=1-1.13\cdot K_{Tm}\]
 \end{frame}
 
-\begin{frame}[label={sec:orgfaaf368}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
+\begin{frame}[label={sec:orge41c64e}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
 Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\) en un mes con \(B_{o,dm}(0) = \SI{4320}{\watthour\per\meter\squared}\)  será:
 
 \begin{itemize}
@@ -679,7 +706,7 @@ Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1137048},plain]{Valores Diarios: Collares-Pereira y Rabl}
+\begin{frame}[label={sec:org8c1e3ae},plain]{Valores Diarios: Collares-Pereira y Rabl}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtDiario.pdf}
 \end{center}
@@ -693,21 +720,26 @@ F_{Dd} = \begin{cases}
 {\scriptsize \par}
 \end{frame}
 
-\begin{frame}[label={sec:orgb225f18}]{Ejemplo}
-\begin{description}
-\item[{Calcular}] las componentes directa y difusa de la radiación solar del:
+\begin{frame}[label={sec:orgae92782}]{Ejemplo}
+Calcular las componentes directa y difusa de la radiación solar del 17
+de Septiembre (día 261) en un lugar con latitud
+\(\phi=\ang{40}\mathrm{N}\) y con irradiación global diaria horizontal
+\(G_d(0)=\SI{4510}{\watthour\per\meter\squared}\).
 
-\begin{itemize}
-\item Mes de Septiembre (día 261) en un lugar con latitud \(\phi=\ang{40}\mathrm{N}\) y con media mensual de irradiación global diaria horizontal
-\(G_{d,m}(0)=\SI{2700}{\watthour\per\meter\squared}\).
-\end{itemize}
-\end{description}
+\begin{align*}
+  B_{0d} &= \SI{8126.366}{\watthour\per\meter\squared}\\
+  K_{Td} &= G_{d}/B_{0d} = \frac{2700}{8126.366} = 0.55498\\
+  F_{Dd} &= 1.188 - 2.272 \cdot 0.55498 + 9.473 \cdot 0.55498^{2} -\\
+         &- 21.856 \cdot 0.55498^{3} + 14.648 \cdot 0.55498^{4} = 0.4984\\
+  D_d(0) &= F_{Dd} \cdot G_d(0) = 0.4984 \cdot 4510 = \SI{2247.78}{\watthour\per\meter\squared}\\
+  B_d(0) &= G_d(0) - D_d(0) = \SI{2262.22}{\watthour\per\meter\squared}
+\end{align*}
 \end{frame}
 \section{Bases de Datos}
-\label{sec:org48033dd}
+\label{sec:org6013ee3}
 \subsection{Introducción}
-\label{sec:orgd9c3892}
-\begin{frame}[label={sec:orga200d0a}]{Variabilidad Solar}
+\label{sec:org7293ae8}
+\begin{frame}[label={sec:org01f7e61}]{Variabilidad Solar}
 \begin{itemize}
 \item La \alert{radiación extra-atmosférica} se puede expresar de forma \alert{analítica} en función del día, hora y latitud.
 \item La \alert{radiación en la superficie terrestre} es un \alert{proceso estocástico} (aleatorio) debido a la interacción con la atmósfera.
@@ -717,7 +749,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org0b95ace}]{Estimaciones a Largo Plazo}
+\begin{frame}[label={sec:org8c37cbe}]{Estimaciones a Largo Plazo}
 \begin{itemize}
 \item Nos interesan \alert{estimaciones a largo plazo} del funcionamiento de los sistemas FV en una localización concreta.
 \item Las fuentes de datos de radiación solar deben:
@@ -728,7 +760,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf011a78}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org7d46422}]{Variabilidad Temporal}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
 \end{center}
@@ -740,7 +772,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2bf816c}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org034d0f3}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[height=0.4\textheight]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -752,7 +784,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgea90a20}]{Resumen}
+\begin{frame}[label={sec:org7c96eec}]{Resumen}
 \begin{block}{Requerimientos}
 Una estimación de la productividad de un SFV confiable y representativa en el largo plazo requiere:
 \begin{itemize}
@@ -763,8 +795,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Fuentes de Datos}
-\label{sec:org35e0365}
-\begin{frame}[label={sec:orgf32bfa2}]{Estaciones Meteorológicas}
+\label{sec:org0aa8479}
+\begin{frame}[label={sec:orga758fc3}]{Estaciones Meteorológicas}
 \begin{itemize}
 \item Series temporales largas
 \item Alta resolución temporal (\(\SI{1}{\sec}\) - \(\SI{1}{\min}\))
@@ -780,7 +812,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:org1b96d23}]{Imágenes de Satelite}
+\begin{frame}[label={sec:orga1a67c7}]{Imágenes de Satelite}
 \begin{itemize}
 \item Baja resolución temporal (\(\SI{15}{\min}\) - \(\SI{1}{hora}\)).
 
@@ -796,7 +828,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8f23b1b}]{Métodos Híbridos}
+\begin{frame}[label={sec:orge542d4c}]{Métodos Híbridos}
 \begin{itemize}
 \item Las medidas terrestres se mezclan con las estimaciones de satélite para mejorar la resolución espacial.
 \item Interpolación Espacial.
@@ -815,7 +847,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge7ef697}]{Fuentes de Datos}
+\begin{frame}[label={sec:orgc45033a}]{Fuentes de Datos}
 \url{https://github.com/oscarperpinan/mds/wiki}
 
 \begin{itemize}
@@ -836,8 +868,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Control de Calidad}
-\label{sec:org7cef574}
-\begin{frame}[label={sec:org095cb52}]{Introducción}
+\label{sec:org006612b}
+\begin{frame}[label={sec:org337c427}]{Introducción}
 \begin{itemize}
 \item Es necesario filtrar y corregir las medidas para eliminar datos erróneos y valores extremos.
 \begin{itemize}
@@ -848,7 +880,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org289f42c}]{Límites Físicos}
+\begin{frame}[label={sec:org9807fff}]{Límites Físicos}
 \begin{itemize}
 \item El índice de claridad no puede ser mayor que 1 (la irradiación global diaria no puede superar la extra-atmosférica).
 \end{itemize}
@@ -868,14 +900,14 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org706ca0a}]{Coherencia Espacial}
+\begin{frame}[label={sec:orgf2707d2}]{Coherencia Espacial}
 \begin{itemize}
 \item Las medidas de una estación se deben comparar con \alert{estaciones cercanas} (por ejemplo, mediante interpolación espacial).
 \item La comparación se debe realizar con \alert{valores agregados} (medias diarias o mensuales).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb233f63}]{Análisis Estadístico de las Desviaciones}
+\begin{frame}[label={sec:org2bbeee2}]{Análisis Estadístico de las Desviaciones}
 \begin{itemize}
 \item Desviaciones, \(\mathbf{D}\), entre observaciones, \(\mathbf{O}\), y un modelo, \(\mathbf{M}\) (u otro conjunto de observaciones):
 \end{itemize}
@@ -893,7 +925,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org3ed96ff}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{frame}[label={sec:orgaaee3ec}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/bias-variance.png}
 \end{center}
@@ -901,7 +933,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:orgbdb245b}]{Métricas}
+\begin{frame}[label={sec:orga8c9282}]{Métricas}
 \begin{itemize}
 \item \alert{Mean Bias Difference (MBD)}, diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -924,7 +956,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
 \]
 \end{frame}
-\begin{frame}[label={sec:org83da794}]{}
+\begin{frame}[label={sec:orga622e0b}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -933,12 +965,12 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{frame}
 
 \section{Radiación Solar en Generadores FV}
-\label{sec:orge90b716}
+\label{sec:org41e681e}
 
 \subsection{Introducción}
-\label{sec:org24ed690}
+\label{sec:org7d56dfd}
 
-\begin{frame}[label={sec:org1c4202c}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org0187ffd}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un ángulo de inclinación positivo para maximizar el rendimiento.
 \item Este ángulo depende de la latitud del lugar y de la aplicación del sistema.
@@ -949,7 +981,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge62ae3f}]{Definiciones}
+\begin{frame}[label={sec:org5920679}]{Definiciones}
 \begin{itemize}
 \item \(\theta_s\), \alert{ángulo de incidencia (AOI)}, ángulo entre los rayos solares y la perpendicular al plano del generador.
 \item \(\alpha\): \alert{orientación del generador} (0º cuando está orientado al mediodía solar)
@@ -957,14 +989,14 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{frame}
 \subsection{Tipos de Sistemas}
-\label{sec:org2d8022c}
-\begin{frame}[label={sec:org10106a9}]{Sistema Estático}
+\label{sec:orgba81889}
+\begin{frame}[label={sec:org8fe9679}]{Sistema Estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5e65a3a}]{Sistemas con seguimiento}
+\begin{frame}[label={sec:orgecf0003}]{Sistemas con seguimiento}
 \begin{itemize}[<+->]
 \item \alert{Fundamento:}
 \begin{itemize}[<.->]
@@ -983,7 +1015,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org29e21c2}]{Algunos tipos de seguimiento solar}
+\begin{frame}[label={sec:org10c71d3}]{Algunos tipos de seguimiento solar}
 \begin{itemize}[<+->]
 \item \alert{Doble eje}
 \begin{itemize}[<.->]
@@ -1011,27 +1043,27 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8950ab9}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
+\begin{frame}[label={sec:orgb218d79}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2ffc999}]{Sistema de Seguimiento (2x ejes)}
+\begin{frame}[label={sec:orga45d691}]{Sistema de Seguimiento (2x ejes)}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
 \subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:org9e00d1b}
-\begin{frame}[label={sec:org0627bab}]{}
+\label{sec:org36421bf}
+\begin{frame}[label={sec:orgbc80554}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6ccc35c}]{Planteamiento}
+\begin{frame}[label={sec:orgeb1e1b3}]{Planteamiento}
 \begin{itemize}
 \item \alert{Objetivo}: construir un perfil diario promedio de valores de \emph{irradiancia} global y difusa, \(G(0), D(0)\), a partir de valores de \emph{irradiación} global y difusa diaria, \(G_d(0), D_d(0)\).
 
@@ -1050,7 +1082,7 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label={sec:orgeee65ba}]{Perfil}
+\begin{frame}[label={sec:org4ef25e5}]{Perfil}
 \[D(0) = r_D \cdot D_{d}(0)\]
 
 \[G(0) = r_G \cdot G_{d}(0)\]
@@ -1059,7 +1091,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4660f5b}]{Ecuaciones}
+\begin{frame}[label={sec:org7cbbb51}]{Ecuaciones}
 \[
 r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\cos(\omega_{s})-\sin(\omega_{s})}
 \]
@@ -1073,15 +1105,15 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 \subsection{Transformación al plano del generador}
-\label{sec:orgeb05e03}
+\label{sec:org0f23918}
 
-\begin{frame}[label={sec:orgdcaab26}]{}
+\begin{frame}[label={sec:org8eabf79}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0f06fbc}]{Planteamiento}
+\begin{frame}[label={sec:orgff8e60a}]{Planteamiento}
 \begin{itemize}
 \item \alert{Irradiancia Directa} \(B(\beta, \alpha)\): ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 \item \alert{Irradiancia Difusa}  \(D(\beta, \alpha)\): modelos del estado de cielo, modelo isotrópico o anisotrópico.
@@ -1093,13 +1125,13 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgb2d873c}]{Irradiancia Directa}
+\begin{frame}[label={sec:org8fd02ec}]{Irradiancia Directa}
 \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 \end{frame}
 
-\begin{frame}[label={sec:org57583d5}]{Irradiancia Difusa}
+\begin{frame}[label={sec:org1ce4f11}]{Irradiancia Difusa}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1107,7 +1139,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[D(\beta,\alpha)=\intop_{\Omega}L(\theta_{z},\psi)\cdot\cos(\theta_{z}^{'})d\Omega\]
 \end{frame}
 
-\begin{frame}[label={sec:org77645c9}]{Irradiancia Difusa Isotrópica}
+\begin{frame}[label={sec:org6c38b0e}]{Irradiancia Difusa Isotrópica}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1117,7 +1149,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 \end{frame}
-\begin{frame}[label={sec:org01c3932}]{Irradiancia Difusa Anisotrópica}
+\begin{frame}[label={sec:orgcf8446a}]{Irradiancia Difusa Anisotrópica}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -1127,7 +1159,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[k_{1} = \frac{B(0)}{B_{0}(0)}\]
 \end{frame}
 
-\begin{frame}[label={sec:org4e52717}]{Irradiancia de Albedo}
+\begin{frame}[label={sec:orgfade888}]{Irradiancia de Albedo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1139,8 +1171,8 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \end{frame}
 
 \subsection{Geometría de los sistemas fotovoltaicos}
-\label{sec:orgd522a30}
-\begin{frame}[label={sec:org47d778e},plain]{Ángulo de Incidencia Sistema Estático}
+\label{sec:org021df85}
+\begin{frame}[label={sec:org58263e9},plain]{Ángulo de Incidencia Sistema Estático}
 \begin{itemize}
 \item Si \(\alpha=0\)
 \end{itemize}
@@ -1157,7 +1189,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org53df455}]{Sistema Estático: Ángulo de Incidencia}
+\begin{frame}[label={sec:org8624dba}]{Sistema Estático: Ángulo de Incidencia}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1168,7 +1200,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 
-\begin{frame}[label={sec:org03cbb3c},plain]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org508695b},plain]{Ángulo de Incidencia Seguidor 1x NS}
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
 \begin{center}
@@ -1176,7 +1208,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org44cd8e7}]{Ángulo de Inclinación Seguidor 1x NS}
+\begin{frame}[label={sec:orgfd8e592}]{Ángulo de Inclinación Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1187,7 +1219,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 
-\begin{frame}[label={sec:org76cd5f2}]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:orgfd12709}]{Ángulo de Incidencia Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1199,7 +1231,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 
-\begin{frame}[label={sec:org1feef2c},plain]{Ángulo de Incidencia Seguidor 2x}
+\begin{frame}[label={sec:org9e4daee},plain]{Ángulo de Incidencia Seguidor 2x}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
 \end{center}
@@ -1211,7 +1243,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
   \cos(\theta_{s}) &= 1
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org00d691c}]{Inclinación Seguidor 2x}
+\begin{frame}[label={sec:orgca55333}]{Inclinación Seguidor 2x}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1222,38 +1254,38 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 
 \subsection{Pérdidas angulares y por suciedad}
-\label{sec:org52c39f0}
+\label{sec:orgd82d945}
 
-\begin{frame}[label={sec:orgc6bd515}]{}
+\begin{frame}[label={sec:org9a591a8}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_efectiva.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8dc06e4}]{Radiación directa}
+\begin{frame}[label={sec:orgec8aba9}]{Radiación directa}
 \[B_{ef}(\beta,\alpha)=B(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot (1-FT_{B}(\theta_{s}))\]
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/Suciedad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5f39115}]{Difusa y Albedo}
+\begin{frame}[label={sec:org9aee2d8}]{Difusa y Albedo}
 \begin{align*}
 D_{ef}^{iso}(\beta,\alpha) &= D^{iso}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{D}(\beta))\\
 D_{ef}^{cir}(\beta,\alpha) &= D^{cir}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{B}(\theta_{s}))\\
 R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{R}(\beta))
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org07e0f7d}]{Pérdidas anuales}
+\begin{frame}[label={sec:org3ca453c}]{Pérdidas anuales}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GefVSG.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Radiación Efectiva según tipologías}
-\label{sec:orgde57f75}
+\label{sec:org8db5bf4}
 
-\begin{frame}[label={sec:orgefad744}]{Radiación en Sistema estático}
+\begin{frame}[label={sec:org3516cf0}]{Radiación en Sistema estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FixedKrig.pdf}
 \end{center}
@@ -1261,7 +1293,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org2d49785}]{Radiación en Seguimiento Eje Horizontal}
+\begin{frame}[label={sec:orgb93643d}]{Radiación en Seguimiento Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizKrig.pdf}
 \end{center}
@@ -1269,14 +1301,14 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org44f4b90}]{Radiación en Seguimiento Doble Eje}
+\begin{frame}[label={sec:org9aa7d54}]{Radiación en Seguimiento Doble Eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoKrig.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org96f9edb}]{Comparación Doble Eje-Estática}
+\begin{frame}[label={sec:org6793b13}]{Comparación Doble Eje-Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoFixed.pdf}
 \end{center}
@@ -1284,7 +1316,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orgb365564}]{Comparación Doble Eje - Horizontal}
+\begin{frame}[label={sec:orga19b9e1}]{Comparación Doble Eje - Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoHoriz.pdf}
 \end{center}
@@ -1292,7 +1324,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orge8e9c90}]{Comparación Eje Horizontal - Estática}
+\begin{frame}[label={sec:orgc32e377}]{Comparación Eje Horizontal - Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizFixed.pdf}
 \end{center}
@@ -1300,20 +1332,20 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orgfd8abe7}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:orgf581c16}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystems.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb54ead0}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org3bf7f3d}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystemsG0.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org74d264b}]{}
+\begin{frame}[label={sec:org6db1af5}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
