Actualiza RD en sección de seguridad eléctrica

--- a/libro/Seguridad.tex
+++ b/libro/Seguridad.tex
@@ -943,21 +943,22 @@ entre polos y tierra.\label{fig:Caja-de-protecci=0000F3n}}
 
 \subsubsection{Cortocircuitos y sobrecargas}
 
-Según el RD 1663-2000 \cite{RealDecreto2000} es necesario incluir
-un interruptor general manual, que será un interruptor magnetotérmico
-omnipolar. Este interruptor, que se ubica en el cuadro de contadores
-de la instalación fotovoltaica, será accesible sólo a la empresa distribuidora,
-con objeto de poder realizar la desconexión manual, que permita la
-realización, de forma segura, de labores de mantenimiento en la red
-de la compañía eléctrica. Esta inaccesibilidad obliga a introducir
-un segundo magnetotérmico omnipolar en la instalación, de menor intensidad
-nominal, que será el que realmente proteja a la instalación AC de
-las sobrecargas y cortocircuitos. Este segundo magnetotérmico actuará
-antes que el interruptor general manual, salvo cortocircuitos de cierta
-importancia provenientes de la red de la compañía. Asimismo, con el
-fin de dar cierta independencia a las líneas propias de cada inversor,
-se suele incluir un interruptor magnetotérmico de menor corriente
-para cada inversor.
+Según el Real Decreto 1699/2011\cite{RealDecreto2011} es necesario
+incluir un elemento de corte general, que habitualmente es un
+interruptor magnetotérmico omnipolar. Este interruptor, que se ubica
+en el cuadro de contadores de la instalación fotovoltaica, será
+accesible sólo a la empresa distribuidora, con objeto de poder
+realizar la desconexión manual, que permita la realización, de forma
+segura, de labores de mantenimiento en la red de la compañía
+eléctrica. Esta inaccesibilidad obliga a introducir un segundo
+magnetotérmico omnipolar en la instalación, de menor intensidad
+nominal, que será el que realmente proteja a la instalación AC de las
+sobrecargas y cortocircuitos. Este segundo magnetotérmico actuará
+antes que el interruptor general manual, salvo cortocircuitos de
+cierta importancia provenientes de la red de la compañía. Asimismo,
+con el fin de dar cierta independencia a las líneas propias de cada
+inversor, se suele incluir un interruptor magnetotérmico de menor
+corriente para cada inversor.
 
 Se recomienda el empleo de magnetotérmicos tipo C, los utilizados
 cuando no existen corrientes de arranque de consumo elevadas, cumpliendo
@@ -1018,25 +1019,17 @@ la red quedará desprotegido.
 
 Por otra parte, es importante tener en cuenta que, al estar basado
 en la ley de Faraday (fuerza electromotriz creada por un flujo magnético
-\emph{variable}), no funciona en circuitos de corriente continua%
-\footnote{Como anécdota, el RD 1663/2000 \cite{RealDecreto2000} ocasiona más
-de un quebradero de cabeza al incluir en su artículo 11 el requerimiento
-de incorporar un {}``interruptor automático diferencial, con el fin
-de proteger a las personas en el caso de derivación de algún elemento
-de la parte continua de la instalación''%
-}. 
-
+\emph{variable}), no funciona en circuitos de corriente continua.
 
 \subsubsection{Puesta a tierra}
 
-Según el RD1663/2000 \cite{RealDecreto2000}, en que se fijan las
-condiciones técnicas para la conexión de instalaciones fotovoltaicas
-a la red, la puesta a tierra se realizará de forma que no altere la
-de la compañía eléctrica distribuidora, con el fin de no transmitir
-defectos a la misma. Asimismo, las masas de la instalación fotovoltaica
-estarán conectadas a una tierra independiente de la del neutro de
-la empresa distribuidora.
-
+Según el Real Decreto 1699/2011 \cite{RealDecreto2011}, en que se
+regula la conexión a red de instalaciones de producción de energía
+eléctrica de pequeña potencia, la puesta a tierra se realizará de
+forma que no altere la de la compañía eléctrica distribuidora, con el
+fin de no transmitir defectos a la misma. Asimismo, las masas de la
+instalación fotovoltaica estarán conectadas a una tierra independiente
+de la del neutro de la empresa distribuidora.
 
 \subsection{Cableado}
 
