--- a/libro/preambulo.tex
+++ b/libro/preambulo.tex
@@ -35,6 +35,9 @@
 
 
 \usepackage[emulate=units]{siunitx}
+\newunit{\wattpeak}{Wp}
+\newunit{\watthour}{Wh}
+\newunit{\amperehour}{Ah}
 \sisetup{per=fraction, fraction=nice, decimalsymbol=comma}
 %\usepackage{lscape}
 \usepackage{mathpazo}%Letra palatino con fuentes para matemáticas
