--- a/libro/EjerciciosGeometriaRadiacion.tex
+++ b/libro/EjerciciosGeometriaRadiacion.tex
@@ -3,150 +3,264 @@
 
 \section{Ángulos Solares}
 
-Calcular el Azimut, Ángulo Cenital y Altura Solar, Duración del Dia
-para el:
 \begin{itemize}
-\item Día del Año: 120, 2 horas después del mediodía, Latitud:
-  $37.2\degree\mathrm{N}$
-\[
-2\cdot\left|\omega_{s}\right|=\SI{13.5}{\hour}\]
-\[
-\gamma_{s}=55.1\degree\]
-\[
-\psi_{s}=57.7\degree\]
+\item Calcula el Azimut, Ángulo Cenital y Altura Solar, Duración del
+  Dia para el día del año 120, 2 horas después del mediodía, latitud
+  $37.2\degree\mathrm{N}$:
+  \[
+    2\cdot\left|\omega_{s}\right|=\SI{13.5}{\hour}\]
+  \[
+    \gamma_{s}=55.1\degree\]
+  \[
+    \psi_{s}=57.7\degree\]
 
-\item Día del Año: 340, 2 horas después del amanecer, Latitud: $\SI{15}{\degree}\mathrm{S}$
+\item Calcula el Azimut, Ángulo Cenital y Altura Solar, Duración del
+  Dia para el día del año día del año 340, 2 horas después del
+  amanecer, latitud $\SI{15}{\degree}\mathrm{S}$:
+
+\[
+  2\cdot\left|\omega_{s}\right|=\SI{12.85}{\hour}\]
+\[
+  \gamma_{s}=27.13\degree\]
+\[
+  \psi_{s}=-108.2\degree\]
+
+\item Calcula la duración del día 261 del año en las siguientes
+  latitudes:
+
+  \begin{itemize}
+  \item $\SI{10}{\degree}\mathrm{N}$: $\SI{12.02}{\hour}$
+  \item $\SI{40}{\degree}\mathrm{N}$: $\SI{12.11}{\hour}$
+  \item $\SI{70}{\degree}\mathrm{N}$: $\SI{12.37}{\hour}$
+  \item $\SI{10}{\degree}\mathrm{S}$: $\SI{11.97}{\hour}$
+  \item $\SI{40}{\degree}\mathrm{S}$: $\SI{11.88}{\hour}$
+  \item $\SI{70}{\degree}\mathrm{S}$: $\SI{11.63}{\hour}$
+  \end{itemize}
+
+\item Calcula la altura solar en el mediodía del día 25 del año en las
+  latitudes:
+
+  \begin{itemize}
+  \item $\SI{10}{\degree}\mathrm{N}$: $\gamma_{s}=60.74\degree$
+  \item $\SI{40}{\degree}\mathrm{N}$: $\gamma_{s}=30.74\degree$
+  \item $\SI{10}{\degree}\mathrm{S}$: $\gamma_{s}=80.74\degree$
+  \item $\SI{40}{\degree}\mathrm{S}$: $\gamma_{s}=69.26\degree$
+  \end{itemize}
+
+\item Calcula la hora solar real correspondiente al día 23 de Abril de
+  2010 a las 12 de la mañana, hora oficial de la ciudad de A Coruña,
+  Galicia. Esta localidad está contenida en el meridiano de longitud
+  $8.38\degree\mathrm{W}$ y su hora oficial está regida por el huso
+  horario GMT+1.
+
+  Usamos la ecuación:
+  
+  \[
+    \omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}
+  \]
+
+  En España se aplica el horario de verano y este día está incluido en
+  el período afectado, $\mathrm{AO}=1$.
+
+  En cuanto a las longitudes:
+  \begin{align*}
+    \lambda_{L} &= -8.38\degree\\
+    \lambda_{H} &= 15\degree\\
+    \Delta\lambda &= -23.38\degree
+  \end{align*}
+  
+
+  Por último, para este día la ecuación del tiempo da como resultado:
+
+  \begin{align*}
+    d_n &= 113\\
+    M &=\frac{2\pi}{365.24}\cdot 113 = 1.9439\\
+    \mathrm{EoT}&=\mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(1.9439) + 0.04184\cdot\sin\left(2\cdot
+                  1.9439 + 3.5884\right)\right) = \SI{1.785}{\minute}
+  \end{align*}
+  
+  Por tanto, $\omega=-37.94\degree$ (aproximadamente las 9 y media de
+  la mañana). El Sol culminará ($\omega=0$) cuando sean las 14:31,
+  hora oficial.
+
 \end{itemize}
-\[
-2\cdot\left|\omega_{s}\right|=\SI{12.85}{\hour}\]
-\[
-\gamma_{s}=27.13\degree\]
-\[
-\psi_{s}=-108.2\degree\]
+
+
+
+\section{Componentes de irradiación en el plano horizontal}
+
 
 \begin{itemize}
-\item Duración del día 261 del año en las latitudes
+\item Calcula la irradiación diaria extra-atmosférica en el plano
+  horizontal del día 18 de septiembre ($d_n = 261$) en un lugar de
+  latitud 40\degree N.
+
+\begin{align*}
+  \delta &= 23,45\degree\cdot\sin\left(\frac{2\pi\cdot\left(261+284\right)}{365}\right) = 1.0089\degree\\
+  \\
+  \cos \omega_s &= -\tan(\delta) \tan(\phi) = -0.01478\\
+  \omega_s &= -90.85\degree = \SI{-1.586}{\radian}\\
+  \\
+  \epsilon_0 &= 1+0.033\cdot\cos(2\pi\cdot261/365) = 0.9928151\\
+  \\
+  B_{0d}(0) &= -\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s}\right) = \\
+         &= \SI{8126.37}{\kilo\watthour\per\meter\squared}
+\end{align*}
+
+\item Calcula las medias mensuales de las componentes de la
+  irradiación en un lugar de latitud 40\degree N, cuya media mensual
+  de irradiación global en el plano horizontal en el mes de septiembre
+  es de $G_{d,m}(0) = \SI{4150}{\watthour\per\meter\squared}$:
+
+  La media mensual de la irradiación extra-atmosférica diaria en el
+  mes de septiembre equivale a la irradiación extra-atmosférica en el
+  día 261 (día promedio), calculado en el apartado anterior:
+
+\[
+  B_{0d,m}(0) = \SI{8126.37}{\kilo\watthour\per\meter\squared}
+\]
+
+Por tanto, el índice de claridad en este mes es:
+
+\[
+  K_{Tm}=\frac{4150}{8126.37}=0.5107
+\]
+
+Según la correlación de Page (medias mensuales):
+
+\[
+  F_{Dm} = 1 - 1.13 \cdot 0.5107 = 0.4229
+\]
+
+Por tanto, las componentes difusa y directa son:
+
+\begin{align*}
+  D_{d,m}(0) &= 0.4229 \cdot 4150 = \SI{1755.04}{\watthour\per\meter\squared}\\
+  B_{d,m}(0) &= 4150 - 1755.04 = \SI{2394.97}{\watthour\per\meter\squared}  
+\end{align*}
+
+
+\item Calcula las componentes directa y difusa de la radiación solar
+  del 17 de Septiembre (día 261) en un lugar con latitud
+  $\phi=\ang{40}\mathrm{N}$ y con irradiación global diaria horizontal
+  $G_d(0)=\SI{4510}{\watthour\per\meter\squared}$.
+
+\begin{align*}
+  B_{0d} &= \SI{8126.366}{\watthour\per\meter\squared}\\
+  K_{Td} &= G_{d}/B_{0d} = \frac{2700}{8126.366} = 0.55498\\
+  F_{Dd} &= 1.188 - 2.272 \cdot 0.55498 + 9.473 \cdot 0.55498^{2} -\\
+         &- 21.856 \cdot 0.55498^{3} + 14.648 \cdot 0.55498^{4} = 0.4984\\
+  D_d(0) &= F_{Dd} \cdot G_d(0) = 0.4984 \cdot 4510 = \SI{2247.78}{\watthour\per\meter\squared}\\
+  B_d(0) &= G_d(0) - D_d(0) = \SI{2262.22}{\watthour\per\meter\squared}
+\end{align*}
+
+
+\item Calcula la irradiancia global y la irradiancia difusa en el
+  plano horizontal 2 horas antes del mediodía del día 261 en un lugar
+  con latitud $\phi=\ang{40}\mathrm{N}$ y con media mensual de
+  irradiación global diaria horizontal
+  $G_{d,m}(0)=\SI{4150}{\Wh\per\meter\squared}$.
+
+  El valor de $\omega$ 2 horas antes del mediodía es
+  $\omega = \SI{-2}{\hour} = -30\degree.$
+
+\begin{align*}
+  r_{D} &= \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\cos(\omega_{s})-\sin(\omega_{s})} = 0.113\\
+  a &= 0.409-0.5016\cdot\sin(\omega_{s}+\frac{\pi}{3})\\
+  b &= 0.6609+0.4767\cdot\sin(\omega_{s}+\frac{\pi}{3})\\
+  r_{G} &= r_{D}\cdot\left(a + b\cdot\cos(\omega)\right) = 0.116
+\end{align*}
+
+\begin{align*}
+  D(0) &= r_D \cdot D_{d}(0) = 0.112 \cdot 1755.04 = \SI{197.98}{\watt\per\meter\squared}\\
+  G(0) &= r_G \cdot G_{d}(0) = 0.116 \cdot 2394.97 = \SI{277.54}{\watt\per\meter\squared}\\
+  B(0) &= G(0) - D(0) = \SI{79.56}{\watt\per\meter\squared}
+\end{align*}
+\end{itemize}
+\section{Ángulos y componentes de irradiación en Sistemas
+  Fotovoltaicos}
 
 \begin{itemize}
-\item $\SI{10}{\degree}\mathrm{N}$: $\SI{12.02}{\hour}$
-\item $\SI{40}{\degree}\mathrm{N}$: $\SI{12.11}{\hour}$
-\item $\SI{70}{\degree}\mathrm{N}$: $\SI{12.37}{\hour}$
-\item $\SI{10}{\degree}\mathrm{S}$: $\SI{11.97}{\hour}$
-\item $\SI{40}{\degree}\mathrm{S}$: $\SI{11.88}{\hour}$
-\item $\SI{70}{\degree}\mathrm{S}$: $\SI{11.63}{\hour}$
+\item Calcula el ángulo de incidencia para el
+  \begin{itemize}
+  \item Día del Año: 120, 2 horas después del mediodía, Latitud:
+    $\SI{37.2}{\degree}\mathrm{N}$;
+
+    \begin{itemize}
+    \item Un sistema estático orientado al Sur y con inclinación de
+      $\SI{30}{\degree}$: $\theta_{s}=30.33\degree$
+    \item Un sistema de seguimiento horizontal N-S:
+      $\theta_{s}=17.98\degree$
+    \item Un sistema de seguimiento acimutal con inclinación a
+      $\SI{35}{\degree}$: $\theta_{s}=0\degree$
+    \item Un sistema de seguimiento a doble eje: $\theta_{s}=0\degree$
+    \end{itemize}
+  \item Día del Año: 340, 2 horas después del amanecer, Latitud:
+    $\SI{15}{\degree}\mathrm{S}$;
+
+    \begin{itemize}
+    \item Un sistema estático orientado al Sur y con inclinación de
+      $\SI{30}{\degree}$: $\theta_{s}=75.1\degree$
+    \item Un sistema de seguimiento horizontal N-S:
+      $\theta_{s}=16.1\degree$
+    \item Un sistema de seguimiento acimutal con inclinación a
+      $\SI{35}{\degree}$: $\theta_{s}=27.87\degree$
+    \item Un sistema de seguimiento a doble eje: $\theta_{s}=0\degree$
+    \end{itemize}
+  \end{itemize}
+
+
+\item Calcula la irradiancia difusa, directa, de albedo y global, en
+  un generador inclinado $\ang{30}$ y orientado al Sur, 2 horas antes
+  del mediodía del día 261 en un lugar con latitud
+  $\phi=\ang{40}\mathrm{N}$ y con media mensual de irradiación global
+  diaria horizontal $G_{d,m}(0)=\SI{4150}{\Wh\per\meter\squared}$.
+
+  En primer lugar obtenemos las variables de geometría solar:
+  \begin{align*}
+    \cos(\theta_{zs}) &= \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi) = 0.6754\\
+    B_{0}(0) &=B_{0}\cdot\epsilon_{0}\cdot\cos\theta_{zs} = \SI{916.69}{\watt\per\meter\squared}
+  \end{align*}
+
+  A continuación, obtenemos el coseno del ángulo de incidencia:
+
+\[
+  \cos(\theta_{s}) = \cos(\delta)\cos(\omega)\cos(\beta-|\phi|)-
+  \mathrm{sign}(\phi)\cdot\sin(\delta)\sin(\beta-|\phi|) = 0.8568
+\]
+
+Además, aprovechamos los valores de las componentes de irradiancia en
+el plano horizontal obtenidos en un apartado anterior:
+
+\begin{align*}
+  D(0) &= \SI{197.98}{\watt\per\meter\squared}\\
+  G(0) &= \SI{277.54}{\watt\per\meter\squared}\\
+  B(0) &= \SI{79.56}{\watt\per\meter\squared}
+\end{align*}
+
+Con este conjunto de valores podemos estimar las componentes de
+irradiancia:
+
+\[
+  B(\beta,\alpha) =
+  B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})} =
+  \SI{100.93}{\watt\per\meter\squared}
+\]
+
+\begin{align*}
+  k_{1} &= \frac{B(0)}{B_{0}(0)} = 0.087\\
+  D^{I}(\beta,\alpha) &= D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2} = \SI{168.68}{\watt\per\meter\squared}\\
+  D^{C}(\beta,\alpha) &= D(0) \cdot k_{1} \cdot \frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})} = \SI{21.79}{\watt\per\meter\squared}\\
+  D(\beta,\alpha) &= D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha) = \SI{190.48}{\watt\per\meter\squared}
+\end{align*}
+
+\begin{align*}
+  \rho &= 0.2\\
+  R(\beta,\alpha) &= \rho\cdot G(0)\cdot\frac{1-\cos(\beta)}{2} = \SI{3.72}{\watt\per\meter\squared}
+\end{align*}
+
+\[
+  G(\alpha,\beta) = B(\alpha, \beta) + D(\alpha, \beta) + G(\alpha,
+  \beta) = \SI{294.13}{\watt\per\meter\squared}
+\]
 \end{itemize}
-\item Altura solar en el mediodía del día 25 del año en las latitudes
-
-\begin{itemize}
-\item $\SI{10}{\degree}\mathrm{N}$: $\gamma_{s}=60.74\degree$
-\item $\SI{40}{\degree}\mathrm{N}$: $\gamma_{s}=30.74\degree$
-\item $\SI{10}{\degree}\mathrm{S}$: $\gamma_{s}=80.74\degree$
-\item $\SI{40}{\degree}\mathrm{S}$: $\gamma_{s}=69.26\degree$
-\end{itemize}
-\item Hora Solar cuando la hora oficial son las 12 del mediodía en un día
-de verano en un lugar de la península con Longitud $\SI{3}{\degree}\mathrm{O}$.\[
-\omega=-33\degree=-\SI{2.2}{\hour}\]
-
-\end{itemize}
-
-\section{Ángulos de Sistemas Fotovoltaicos}
-
-Calcular el ángulo de incidencia para el
-\begin{itemize}
-\item Día del Año: 120, 2 horas después del mediodía, Latitud: $\SI{37.2}{\degree}\mathrm{N}$;
-
-\begin{itemize}
-\item Un sistema estático orientado al Sur y con inclinación de $\SI{30}{\degree}$:
-$\theta_{s}=30.33\degree$
-\item Un sistema de seguimiento horizontal N-S: $\theta_{s}=17.98\degree$
-\item Un sistema de seguimiento acimutal con inclinación a $\SI{35}{\degree}$:
-$\theta_{s}=0\degree$
-\item Un sistema de seguimiento a doble eje: $\theta_{s}=0\degree$
-\end{itemize}
-\item Día del Año: 340, 2 horas después del amanecer, Latitud: $\SI{15}{\degree}\mathrm{S}$;
-
-\begin{itemize}
-\item Un sistema estático orientado al Sur y con inclinación de $\SI{30}{\degree}$:
-$\theta_{s}=75.1\degree$
-\item Un sistema de seguimiento horizontal N-S: $\theta_{s}=16.1\degree$
-\item Un sistema de seguimiento acimutal con inclinación a $\SI{35}{\degree}$:
-$\theta_{s}=27.87\degree$
-\item Un sistema de seguimiento a doble eje: $\theta_{s}=0\degree$
-\end{itemize}
-\end{itemize}
-
-
-
-\section{Componentes de irradiación}
-
-
-
-Calcular las componentes directa y difusa de la radiación solar del
-mes de Septiembre (día 261) en un lugar con latitud $\phi=\ang{40}\mathrm{N}$
-y con media mensual de irradiación global diaria horizontal $G_{d,m}(0)=\SI{2700}{\Wh\per\meter\squared}$.
-
-\[
-K_{t}=0.33\]
-\[
-F_{d}=0.6271\]
-\[
-D_{d,m}(0)=\SI{1693.2}{\Wh\per\meter\squared}\]
-
-
-\[
-B_{d,m}(0)=\SI{1006.8}{\Wh\per\meter\squared}\]
-
-
-\section{Componentes de irradiancia en el plano horizontal} 
-Calcular la irradiancia global y la irradiancia difusa en el plano
-horizontal 2 horas antes del mediodía del día 261 en un lugar con
-latitud $\phi=\ang{40}\mathrm{N}$ y con media mensual de irradiación
-global diaria horizontal $G_{d,m}(0)=\SI{2700}{\Wh\per\meter\squared}$.
-
-\[
-r_{D}=0.114\]
-
-\[
-r_{G}=0.117\]
-
-\[
-D(0)=\SI{193.9}{\watt\per\meter\squared}\]
-
-\[
-G(0)=\SI{320.8}{\watt\per\meter\squared}\]
-
-
-\section{Componentes de irradiancia en el plano del generador} 
-Calcular la irradiancia difusa, directa, de albedo y global, en un
-generador inclinado $\ang{30}$ y orientado al Sur, 2 horas antes
-del mediodía del día 261 en un lugar con latitud $\phi=\ang{40}\mathrm{N}$
-y con media mensual de irradiación global diaria horizontal $G_{d,m}(0)=\SI{2700}{\Wh\per\meter\squared}$.
-
-\[
-B(\alpha,\beta)=\SI{160.1}{\watt\per\meter\squared}\]
-
-
-\[
-D(\alpha,\beta)=\SI{191.2}{\watt\per\meter\squared}\]
-
-
-\[
-R(\alpha,\beta)=\SI{4.3}{\watt\per\meter\squared}\]
-
-
-\[
-G(\alpha,\beta)=\SI{355.6}{\watt\per\meter\squared}\]
-
-
-\section{Irradiación anual efectiva} 
-Calcular la irradiación anual efectiva que incide en un generador
-orientado al Sur e inclinado $\ang{20}$ en un lugar con latitud $\ang{30}\mathrm{N}$
-y una media anual de la irradiación global diaria en el plano horizontal
-de $\SI{5250}{\Wh\per\meter\squared}$, suponiendo una suciedad
-media.
-
-\[
-G_{a}(\beta_{opt})=\SI{5717.3}{\Wh\per\meter\squared}\]
-\[
-G_{ef,a}(\beta)=\SI{5304.3}{\Wh\per\meter\squared}\]
-
